src/main/java/application/dataset/test/invalidRandomAddresses/todo/medium/RandomAddressesWithFieldsFilledIncorrectly.java
package application.dataset.test.invalidRandomAddresses.todo.medium;

public class RandomAddressesWithFieldsFilledIncorrectly {

    // stiind structura adresei postale, generez un nr random de la la 0 la 4 si pe baza acestuia distribui info inm fieldul cu nr corespunzator
    // clasa include atat adrese cu mai multe info intr un singur field, sau nerespectarea sensului fieldului
}
